--- a/spotifun/package.json
+++ b/spotifun/package.json
@@ -20,7 +20,8 @@
     "react-dom": "19.1.0",
     "react-hook-form": "7.56.4",
     "react-router": "7.6.0",
-    "react-toastify": "11.0.5"
+    "react-toastify": "11.0.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "9.27.0",
