--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:sdk": "pnpm --filter @it-incubator/spotifun-api-sdk run build-and-clean",
     "build:sdk:simple": "pnpm --filter @it-incubator/spotifun-api-sdk run build",
-    "start:spotify-tanstack": "pnpm --filter spotifun run dev"
+    "start:spotify-tanstack": "pnpm --filter spotifun run dev",
+    "start:spotify-rtk": "pnpm --filter spotifun-rtk-query run dev"
   },
   "keywords": [],
   "author": "",
