--- a/apps/spotifun-rtk-query/package.json
+++ b/apps/spotifun-rtk-query/package.json
@@ -10,15 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@it-incubator/spotifun-api-sdk": "workspace:*",
     "@reduxjs/toolkit": "2.8.2",
     "axios": "1.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "7.58.0",
     "react-redux": "9.2.0",
-    "@it-incubator/spotifun-api-sdk": "workspace:*"
+    "react-router": "7.6.2",
+    "react-toastify": "11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "9.29.0",
+    "@types/node": "24.0.3",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
     "@vitejs/plugin-react": "4.4.1",
