--- a/apps/spotifun-rtk/package.json
+++ b/apps/spotifun-rtk/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@it-incubator/spotifun-api-sdk": "workspace:*",
     "@reduxjs/toolkit": "2.8.2",
+    "@vitejs/plugin-react-swc": "3.10.2",
     "axios": "1.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
