--- a/apps/spotifun-rtk/package.json
+++ b/apps/spotifun-rtk/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "2.8.2",
     "@vitejs/plugin-react-swc": "3.10.2",
+    "async-mutex": "^0.5.0",
     "axios": "1.10.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
