--- a/apps/spotifun-rtk/package.json
+++ b/apps/spotifun-rtk/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "6.3.1",
+    "@dnd-kit/sortable": "10.0.0",
+    "@dnd-kit/utilities": "3.2.2",
     "@reduxjs/toolkit": "2.8.2",
     "@vitejs/plugin-react-swc": "3.10.2",
     "async-mutex": "^0.5.0",
