--- a/apps/spotifun-rtk/.env
+++ b/apps/spotifun-rtk/.env
@@ -1,3 +1,2 @@
 VITE_BASE_URL=https://spotifun.it-incubator.app/api/1.0
-VITE_API_KEY=
-VITE_AUTH_TOKEN=
+VITE_API_KEY=cef6bff9-f68d-4f67-a7f7-0108ef810aae
