--- a/apps/spotifun-rtk/package.json
+++ b/apps/spotifun-rtk/package.json
@@ -7,8 +7,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "generate-api": "npx @rtk-query/codegen-openapi openapi-config.js"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@dnd-kit/core": "6.3.1",
@@ -27,7 +26,6 @@
   },
   "devDependencies": {
     "@eslint/js": "9.29.0",
-    "@rtk-query/codegen-openapi": "2.0.0",
     "@types/node": "24.0.3",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
