--- a/apps/trelly-rtk/package.json
+++ b/apps/trelly-rtk/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "6.3.1",
     "@mui/material": "6.3.1",
     "@reduxjs/toolkit": "2.8.2",
+    "async-mutex": "0.5.0",
     "axios": "1.7.9",
     "react": "19.0.0",
     "react-dom": "19.0.0",
