--- a/apps/musicfun-tanstack-query/package.json
+++ b/apps/musicfun-tanstack-query/package.json
@@ -13,21 +13,27 @@
     "format": "prettier --write .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "generate:api": "pnpm openapi-typescript https://musicfun.it-incubator.app/api-json -o ./src/shared/api/schema.ts",
+    "generate:api:dimych": "pnpm openapi-typescript http://localhost:9001/api-json -o ./src/shared/api/schema.ts"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query-devtools": "^5.81.5",
+    "openapi-fetch": "^0.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.60.0",
     "react-router": "7.6.2"
   },
   "devDependencies": {
-    "clsx": "^2.1.1",
     "@eslint/js": "^9.25.0",
     "@storybook/react-vite": "9.0.8",
     "@types/node": "^24.0.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "clsx": "^2.1.1",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.1",
@@ -36,6 +42,7 @@
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-storybook": "9.0.8",
     "globals": "^16.0.0",
+    "openapi-typescript": "^7.8.0",
     "prettier": "^3.5.3",
     "storybook": "9.0.8",
     "stylelint": "^16.20.0",
