--- a/apps/musicfun-tanstack/package.json
+++ b/apps/musicfun-tanstack/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "5.80.6",
     "@tanstack/react-query-devtools": "5.80.6",
     "axios": "1.10.0",
+    "clsx": "^2.1.1",
     "openapi-fetch": "0.14.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
