--- a/apps/musicfun-rtk-query/package.json
+++ b/apps/musicfun-rtk-query/package.json
@@ -20,9 +20,12 @@
     "async-mutex": "0.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-easy-crop": "^5.4.2",
+    "react-hook-form": "7.58.0",
     "react-redux": "9.2.0",
     "react-router": "7.6.2",
-    "react-toastify": "11.0.5"
+    "react-toastify": "11.0.5",
+    "zod": "3.24.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
