--- a/apps/musicfun-rtk/package.json
+++ b/apps/musicfun-rtk/package.json
@@ -22,7 +22,8 @@
     "react-hook-form": "7.58.0",
     "react-redux": "9.2.0",
     "react-router": "7.6.2",
-    "react-toastify": "11.0.5"
+    "react-toastify": "11.0.5",
+    "socket.io-client": "4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "9.29.0",
