--- a/apps/musicfun-tanstack-query-small-example/package.json
+++ b/apps/musicfun-tanstack-query-small-example/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@asyncapi/cli": "^3.2.0",
     "@eslint/js": "^9.29.0",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
     "@tanstack/router-plugin": "^1.124.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
