--- a/apps/musicfun-tanstack-query-small-example/tsr.config.json
+++ b/apps/musicfun-tanstack-query-small-example/tsr.config.json
@@ -1,6 +1,4 @@
 {
   "routesDirectory": "./src/app/routes",
-  "generatedRouteTree": "./src/app/routes/routeTree.gen.ts",
-  "routeFileIgnorePrefix": "-",
-  "quoteStyle": "single"
+  "generatedRouteTree": "./src/app/routes/routeTree.gen.ts"
 }
