--- a/youtube/rtk-query/lesson1/package.json
+++ b/youtube/rtk-query/lesson1/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "react": "19.1.1",
-    "react-dom": "19.1.1"
+    "react-dom": "19.1.1",
+    "react-router": "7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "9.32.0",
+    "@types/node": "24.1.0",
     "@types/react": "19.1.9",
     "@types/react-dom": "19.1.7",
     "@vitejs/plugin-react-swc": "3.11.0",
