--- a/youtube/rtk-query/lesson1/package.json
+++ b/youtube/rtk-query/lesson1/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "2.8.2",
     "react": "19.1.1",
     "react-dom": "19.1.1",
+    "react-hook-form": "7.61.1",
     "react-redux": "9.2.0",
     "react-router": "7.7.1"
   },
