--- a/youtube/rtk-query/lesson1/package.json
+++ b/youtube/rtk-query/lesson1/package.json
@@ -15,7 +15,8 @@
     "react-dom": "19.1.1",
     "react-hook-form": "7.61.1",
     "react-redux": "9.2.0",
-    "react-router": "7.7.1"
+    "react-router": "7.7.1",
+    "react-toastify": "11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "9.32.0",
