--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           run_install: false
 
-      # 3) Включаем кэш pnpm (после того как pnpm появился)
+      # 3) Включаем кэш pnpm (после того как pnpm появился)   dds
       - uses: actions/setup-node@v4
         with:
           node-version: lts/*
