--- a/apps/musicfun-rtk/.env
+++ b/apps/musicfun-rtk/.env
@@ -1,3 +1,4 @@
 VITE_BASE_URL=https://musicfun.it-incubator.app/api/1.0
 VITE_DOMAIN_ADDRESS=http://localhost:5175
+VITE_SOCKET_URL=https://musicfun.it-incubator.app
 VITE_API_KEY=f8497142-35f2-477c-9d80-ebcfc102c2e2
