--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "format:check": "prettier --check ."
   },
   "devDependencies": {
-    "prettier": "3.5.3",
     "husky": "9.1.7",
-    "lint-staged": "16.1.2"
+    "lint-staged": "16.1.2",
+    "prettier": "3.5.3"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "react-dom": "19.1.0",
+    "react-native-web": "^0.21.0"
   }
 }
