feat: modified vite build script

--- a/apps/musicfun-rtk-query/package.json
+++ b/apps/musicfun-rtk-query/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "lint:css": "stylelint \"src/**/*.{css,scss}\"",
@@ -13,6 +13,7 @@
     "format": "prettier --write .",
     "preview": "vite preview",
     "storybook": "storybook dev -p 6006",
+    "typecheck": "tsc -b --noEmit",
     "build-storybook": "storybook build"
   },
   "dependencies": {
