--- a/apps/musicfun-react-native-expo/package.json
+++ b/apps/musicfun-react-native-expo/package.json
@@ -26,11 +26,13 @@
     "babel-plugin-module-resolver": "^5.0.2",
     "dotenv": "^17.2.3",
     "expo": "~54.0.10",
+    "expo-auth-session": "^7.0.8",
     "expo-constants": "~18.0.9",
     "expo-font": "^14.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.8",
     "expo-status-bar": "~3.0.8",
+    "expo-web-browser": "^15.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "^2.28.0",
