disaplay current user name

--- a/apps/musicfun-react-native-expo/.env.template
+++ b/apps/musicfun-react-native-expo/.env.template
@@ -6,6 +6,6 @@
 #3. .env.production - файл для продакшена, в нем присутствуют все необходимые переменные
 
 
-API_BASE_URL='https://api.musicfun.com' //Базовый URL приложения
-API_API_KEY='your_api_key' //Ключ API пользователя от  https://apihub.it-incubator.io/en/2
+API_BASE_URL='https://musicfun.it-incubator.app/api/' #Базовый URL приложения
+API_API_KEY='your_api_key' #Ключ API пользователя от  https://apihub.it-incubator.io/en/2
 
