--- a/apps/react-effector-fsd/package.json
+++ b/apps/react-effector-fsd/package.json
@@ -8,8 +8,8 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "react-router-serve ./build/server/index.js",
-    "typecheck": "react-router typegen && tsc",
+    "start": "vite ./build/server/index.js",
+    "typecheck": "tsc --watch",
     "generate:api": "pnpm openapi-typescript https://musicfun.it-incubator.app/api-json -o ./src/shared/api/schema.ts --root-types --enum --enum-values --dedupe-enums"
   },
   "dependencies": {
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "@react-router/dev": "^7.9.4",
+    "@storybook/react-vite": "^9.1.13",
     "@tailwindcss/vite": "^4.1.14",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
