--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,38 +71,8 @@ jobs:
       - name: Copy root index.html
         run: cp public/index.html dist/index.html
 
-      - name: Create 404.html for SPA fallback
-        run: |
-          cat > dist/404.html << 'EOF'
-          <!DOCTYPE html>
-          <html>
-            <head>
-              <meta charset="utf-8">
-              <title>Redirecting...</title>
-              <script>
-                // SPA redirect for GitHub Pages
-                (function() {
-                  var path = window.location.pathname;
-                  var search = window.location.search;
-                  var hash = window.location.hash;
-
-                  // Determine which app the path belongs to
-                  if (path.startsWith('/tanstackquery/') || path === '/tanstackquery') {
-                    var fullPath = path + search + hash;
-                    window.location.replace('/tanstackquery/?spa_redirect=' + encodeURIComponent(fullPath));
-                  } else if (path.startsWith('/rtkquery/') || path === '/rtkquery') {
-                    var fullPath = path + search + hash;
-                    window.location.replace('/rtkquery/?spa_redirect=' + encodeURIComponent(fullPath));
-                  } else {
-                    // Unknown path, redirect to home
-                    window.location.replace('/');
-                  }
-                })();
-              </script>
-            </head>
-            <body></body>
-          </html>
-          EOF
+      - name: Copy root 404.html
+        run: cp public/404.html dist/404.html
 
       - name: Add CNAME
         run: echo 'app.musicfun.dev' > dist/CNAME
