--- a/apps/musicfun-tanstack-query-zustand/package.json
+++ b/apps/musicfun-tanstack-query-zustand/package.json
@@ -47,6 +47,7 @@
     "globals": "^16.0.0",
     "openapi-typescript": "^7.8.0",
     "prettier": "^3.5.3",
+    "sass-embedded": "^1.93.3",
     "storybook": "9.0.8",
     "stylelint": "^16.20.0",
     "stylelint-config-clean-order": "^7.0.0",
